@@ -8,10 +8,8 @@ text for hand-held devices without picking your finger off the screen.
 For information about QuikWriting, take a look at
 http://mrl.nyu.edu/~perlin/demos/quikwriting.html
 
-To test the software on a desktop you might want to configure it with the
-destination window, by issuing:
-#./configure --enable-standalone
-which will add a window containing the inputed text.
+To test the software on a desktop, simply choose the focus window before
+beginning inputing text.
 
 You can specify another font to use with the -f switch, for example:
 #qwo -f "-*-courier-bold-*-*-24-*-*-*-*-*-*-*"
