@@ -4,7 +4,7 @@ AM_CPPFLAGS = \
   -DPKGDATADIR=\"$(pkgdatadir)\" \
   -DDATADIR=\""$(datadir)"\" -D_GNU_SOURCE
 
-AM_CFLAGS = -Wall -pedantic -std=c99 @DEPENDENCIES_CFLAGS@
+AM_CFLAGS = -Wall -pedantic -std=c99
 
 # add the name of your application
 bin_PROGRAMS = qwo
@@ -12,8 +12,6 @@ bin_PROGRAMS = qwo
 # add the sources to compile for your application
 qwo_SOURCES = \
   qwo.c
-
-qwo_LDADD  = @DEPENDENCIES_LIBS@
 
 MAINTAINERCLEANFILES  = config.h.in Makefile.in
 
